Bug 246189 - Krusader crashes when a file is viewed
Summary: Krusader crashes when a file is viewed
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Shie Erlich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 21:41 UTC by Peter Soproni
Modified: 2014-03-18 08:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Soproni 2010-07-29 21:41:49 UTC
Application: krusader (2.0.0 "Mars Pathfinder")
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-24-generic x86_64
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
Krusader crashes when a file is viewed with its inbuilt application and the viewer is closed with F4

The crash can be reproduced every time.

 -- Backtrace:
Application: Krusader (krusader), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fa30ce57760 (LWP 12632))]

Thread 2 (Thread 0x7fa2eef9d710 (LWP 12633)):
#0  0x00007fa307be6f83 in poll () from /lib/libc.so.6
#1  0x00007fa3043ec4a9 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007fa3043ec8fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007fa3089f2566 in QEventDispatcherGlib::processEvents (this=0x2d1a850, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007fa3089c7992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007fa3089c7d6c in QEventLoop::exec (this=0x7fa2eef9cdb0, flags=) at kernel/qeventloop.cpp:201
#6  0x00007fa3088d1d59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007fa3089a8178 in QInotifyFileSystemWatcherEngine::run (this=0x2cb8180) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fa3088d4775 in QThreadPrivate::start (arg=0x2cb8180) at thread/qthread_unix.cpp:248
#9  0x00007fa3086449ca in start_thread () from /lib/libpthread.so.0
#10 0x00007fa307bf36fd in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fa30ce57760 (LWP 12632)):
[KCrash Handler]
#5  0x00007fa30946584c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff583bc0a0) at kernel/qapplication_x11.cpp:3490
#6  0x00007fa309491882 in x11EventSourceDispatch (s=0x26335c0, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#7  0x00007fa3043e88c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#8  0x00007fa3043ec748 in ?? () from /lib/libglib-2.0.so.0
#9  0x00007fa3043ec8fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0x00007fa3089f2513 in QEventDispatcherGlib::processEvents (this=0x2609560, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#11 0x00007fa30949146e in QGuiEventDispatcherGlib::processEvents (this=0x7fff583bb560, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#12 0x00007fa3089c7992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#13 0x00007fa3089c7d6c in QEventLoop::exec (this=0x7fff583bc3d0, flags=) at kernel/qeventloop.cpp:201
#14 0x00007fa3089cbaab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#15 0x000000000045c40e in main (argc=<value optimized out>, argv=<value optimized out>) at /build/buildd/krusader-2.0.0/krusader/main.cpp:268

Possible duplicates by query: bug 245881, bug 245385, bug 245077, bug 245022, bug 244982.

Reported using DrKonqi
Comment 1 Jan Lepper 2011-06-11 19:30:46 UTC
Is it reproducible on >= 2.3 beta1 ?
Comment 2 Jan Lepper 2012-09-24 20:50:57 UTC
Closing as WORKSFORME.
Comment 3 Inge Wallin 2014-03-18 07:51:12 UTC
Git commit 4b851cece19ca2b2ba8a08083ee2f9b72cf82f2f by Inge Wallin.
Committed on 18/03/2014 at 07:45.
Pushed by ingwa into branch 'KDE/4.13'.

Fix bug 246198: Making two words synonyms does not mark file as modified
REVIEW: 116868

M  +2    -0    TODO
M  +10   -6    src/editor/editor.cpp
M  +3    -1    src/editor/editor.h
M  +9    -0    src/editor/synonymwidget.cpp
M  +9    -0    src/editor/synonymwidget.h

http://commits.kde.org/parley/4b851cece19ca2b2ba8a08083ee2f9b72cf82f2f
Comment 4 Inge Wallin 2014-03-18 08:03:17 UTC
Arrgh!  The commit above should have referred to 246198.  sorry about that