Fix bug 246198: Making two words synonyms does not mark file as modified

BUG: 246189
REVIEW: 116868